add env file and load db configuration from env

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^3.3",
+        "ext-pdo": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "App/",
-            "Config\\": "Config/",
             "Core\\": "Core/"
         }
     }
